test/regress/coverage-item-lookup-X-break.test
; Test item_t::lookup break for 'X' prefix (item.cc line 525)
2024/01/01 Test
    Expenses:Food    $10.00
    Assets:Cash

test reg --format '%(Xfoo)\n' -> 1
__ERROR__
While calculating format expression:
  Xfoo
While evaluating value expression:
  Xfoo
  ^^^^
While handling posting from "$FILE", line 3:
>     Expenses:Food    $10.00
Error: Unknown identifier 'Xfoo'
end test
